// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typeDefs MockObject __type should match snapshot 1`] = `
Object {
  "MockObject": Object {
    "fields": Array [
      Object {
        "args": Array [],
        "description": "",
        "name": "Boolean",
        "type": Object {
          "name": null,
        },
      },
      Object {
        "args": Array [],
        "description": "",
        "name": "Float",
        "type": Object {
          "name": null,
        },
      },
      Object {
        "args": Array [
          Object {
            "defaultValue": null,
            "description": "",
            "name": "value",
          },
        ],
        "description": "",
        "name": "ID",
        "type": Object {
          "name": null,
        },
      },
      Object {
        "args": Array [],
        "description": "",
        "name": "Int",
        "type": Object {
          "name": null,
        },
      },
      Object {
        "args": Array [
          Object {
            "defaultValue": "0",
            "description": "",
            "name": "length",
          },
        ],
        "description": "",
        "name": "List",
        "type": Object {
          "name": null,
        },
      },
      Object {
        "args": Array [
          Object {
            "defaultValue": null,
            "description": "",
            "name": "seed",
          },
        ],
        "description": "",
        "name": "Mock",
        "type": Object {
          "name": "MockObject",
        },
      },
      Object {
        "args": Array [],
        "description": "",
        "name": "Null",
        "type": Object {
          "name": "String",
        },
      },
      Object {
        "args": Array [
          Object {
            "defaultValue": null,
            "description": "",
            "name": "value",
          },
        ],
        "description": "",
        "name": "String",
        "type": Object {
          "name": null,
        },
      },
    ],
    "inputFields": null,
  },
}
`;

exports[`typeDefs MockObject should return consistent, random values 1`] = `
Object {
  "Mock": Object {
    "Boolean": true,
    "Float": 0.7072,
    "ID": "70814",
    "Int": 83994,
    "List": Array [
      Object {
        "ID": "29090",
      },
      Object {
        "ID": "12132",
      },
    ],
    "Mock": Object {
      "ID": "55079",
    },
    "Null": null,
    "String": "Impedit voluptas nostrum.",
  },
}
`;

exports[`typeDefs Query __type should match snapshot 1`] = `
Object {
  "Query": Object {
    "fields": Array [
      Object {
        "args": Array [
          Object {
            "defaultValue": null,
            "description": "",
            "name": "seed",
          },
        ],
        "description": "",
        "name": "Mock",
        "type": Object {
          "name": "MockObject",
        },
      },
    ],
  },
}
`;
